# e-commerce-agent-for-fun

./: .gitignore  CLAUDE.md  README.md  agent.py  memory.py  memory_store.json  migrate_to_pgvector.py  requirements.txt  resilience.py  retrieval.py  setup_db.py  setup_vector_db.py
apps/backend/: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_rag_pipeline.py
apps/backend/backend/: agent.py  checkpoint.py  config.py  memory.py  resilience.py  retrieval.py
apps/backend/backend/api/: README.md  main.py  routes.py  schemas.py
apps/backend/backend/db/: migrate_pgvector.py  setup.py  vector_setup.py
apps/backend/backend/graph/: agent_graph.py  nodes.py
apps/backend/backend/intent/: __init__.py  base.py  keyword.py  llm_hybrid.py  semantic.py
apps/backend/backend/knowledge/: __init__.py  graph_store.py  models.py  neo4j_setup.py  neo4j_store.py  retrievers.py  schema.py  setup.py
apps/backend/backend/rag/: __init__.py  embedding_adapter.py  ingestion.py  query_engine.py
apps/backend/backend/tools/: __init__.py  knowledge.py  order.py  policy.py  product_qa.py  weather.py
apps/backend/data/: product_descriptions.txt  store_policies.txt
apps/backend/data/seed/: attributes.json  categories.json  policies.json  products.json  relations.json  synonyms.json  tags.json
apps/backend/docs/: deploy_plan.md
apps/backend/prompts/: __init__.py  api.py  loader.py  models.py
apps/backend/prompts/templates/: extract_city.j2  intent.j2  llm_extract.j2  reply.j2  reply_strict.j2  rerank.j2  semantic.j2  summarize.j2  validation.j2
apps/backend/tests/: README.md  conftest.py  eval_rag.py  eval_results.json  test_knowledge.py  test_neo4j_store.py  test_product_qa_tool.py  test_rag_ingestion.py
apps/frontend/: README.md  index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: ChatWidget.tsx  MessageBubble.tsx  MessageList.tsx
apps/frontend/src/hooks/: useAgentChat.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/types/: index.ts
docs/: agent-framework-comparison.md  architecture.md  aws-architecture.md  context-management-langchain-langgraph.md  interview-prep.md  knowledge-graph-foundation.md  knowledge-graph-integration.md  langchain-langgraph-source-architecture.md  langgraph-checkpointing-trace.md  langgraph-refactor-plan.md  learning-roadmap.md  llm-invoke-trace.md  pregel-execution-engine.md  production-agent-learning-plan.md  rag-deep-dive.md  rag-evaluation.md  runnable-composition-trace.md  scaling-plan.md  streaming-protocol-trace.md  tool-calling-trace.md
docs/superpowers/diagrams/: architecture-detail.html  architecture.html  datataxon-agent.html  datataxon-architecture.html  doc-intelligence-platform.html  multi-framework-rag-knowledge-architecture.md
docs/superpowers/plans/: 2026-05-14-answer-validation-implementation.md  2026-05-31-multi-framework-rag-knowledge-plan.md  2026-06-17-doc-intelligence-demo.md
docs/superpowers/specs/: 2026-05-14-answer-validation-design.md  2026-05-31-multi-framework-rag-knowledge-design.md  2026-05-31-taxonomy-application-layer-design.md  2026-06-18-prompt-management-design.md
experiments/: store_policies.md
experiments/chroma_comparison/baseline_500/: chroma.sqlite3
experiments/chroma_comparison/markdown_headers/: chroma.sqlite3
experiments/chroma_comparison/md_embed/: chroma.sqlite3
experiments/chroma_comparison/md_raw/: chroma.sqlite3
experiments/chroma_comparison/paragraph/: chroma.sqlite3
experiments/chroma_comparison/small_200/: chroma.sqlite3
experiments/chroma_tier2/: chroma.sqlite3
infra/database/: README.md
infra/docker/: README.md
plans/: future_plans.md
scripts/: dev-setup.sh
