[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-agent-backend"
version = "0.1.0"
description = "E-commerce AI support agent backend"
requires-python = ">=3.11"
dependencies = [
    # LangChain / LangGraph
    "langchain==1.2.15",
    "langchain-core==1.3.2",
    "langchain-openai==1.2.1",
    "langchain-community==0.4.1",
    "langgraph>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    # Retrieval & Vector DB
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    # Resilience
    "tenacity>=8.0.0",
    # Neo4j graph database
    "neo4j>=5.27.0",
    # LlamaIndex for RAG ingestion and querying
    "llama-index>=0.12.0",
    "llama-index-vector-stores-postgres>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    # API layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    # Validation & Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Production WSGI server
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    # Evaluation
    "ragas>=0.3.0",
    "pandas>=2.0.0",
    "datasets>=3.0.0",
    # Code quality
    "ruff>=0.15.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (Python upgrade checks)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Start with moderate strictness; we can tighten later
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

# LangChain type stubs are incomplete; skip deep analysis to avoid false positives
[[tool.mypy.overrides]]
module = ["langchain.*", "langgraph.*", "langchain_community.*", "langchain_core.*", "langchain_openai.*", "langchain_text_splitters.*"]
follow_imports = "skip"
